[COLOR="DeepSkyBlue"]2.4.6 (27)[/COLOR]:
[LIST]
[*] API bump.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.5 (26)[/COLOR]:
[LIST]
[*] Added Russian language strings courtesy of Ckau.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.4 (25)[/COLOR]:
[LIST]
[*] Set up the character default settings to the same as the account-wide default settings.
[*] Add in minimum version checking for UnknownTracker.
[*] Removed version checking for a library that we don't even use.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.3 (24)[/COLOR]:
[LIST]
[*] Add in predefined rules for UnknownTracker integration plugin.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.2 (23)[/COLOR]:
[LIST]
[*] Remove annoying debug printout.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.1 (22)[/COLOR]:
[LIST]
[*] Fix problem with isunknown() returning false where none of the toons knew the item.
[*] Fix addon version.
[/LIST]

[COLOR="DeepSkyBlue"]2.4 (21)[/COLOR]:
COLOR="MediumSlateBlue"]Enhancement[/COLOR]
[LIST]
[*] Now integrated with the Unknown Tracker Addon to allow you to write rules about if a recipe, motif, style page, furnishing recipes, or runeboxes are unknown to your character(s). [I] Requires version 0.63 of the addon "Unknown Tracker" to be installed for this to work. [/I] (Thanks to kadeer for modifications to "Unknown Tracker" to allow this to work!)